Complete build, limiter, redis and test coverage work